# Traffic-Sign-Recognition-Pipeline

./: .gitattributes  .gitignore  README.md  vision.md
cpp/: CMakeLists.txt  main.cpp
cpp/images/: 20km.ppm
cpp/include/: BatchRunner.h  Classifier.h  ImageLoader.h  Postprocessor.h  Preprocessor.h  Types.h
cpp/src/: BatchRunner.cpp  Classifier.cpp  ImageLoader.cpp  Postprocessor.cpp  Preprocessor.cpp
python/: ground_truth.csv  model_implementation.ipynb  png_to_ppm.ipynb  traffic_sign_model.onnx  training.ipynb
python/ppm_test/: traffic_sign_model.onnx
